--- a/myapp/templates/home.html
+++ b/myapp/templates/home.html
@@ -91,13 +91,7 @@
     <div class="bg-image"></div>
     <div class="container">
         <button class="user">
-            <a class="user" href="{% url 'register_user' %}">User</a>
-        </button>
-        <button class="sales">
-            <a href="{% url 'register_seller' %}">Saler</a>
-        </button>
-        <button class="login">
-            <a href="{% url 'register_admin' %}">Admin</a>
+            <a class="user" href="{% url 'register' %}">User</a>
         </button>
     </div>
 </body>
