--- a/myapp/templates/login.html
+++ b/myapp/templates/login.html
@@ -51,11 +51,11 @@ background: linear-gradient(to right, rgba(106, 17, 203, 1), rgba(37, 117, 252, 
                             <p class="text-white-50 mb-5">Please enter your login and password!</p>
                             <form action="" method="post">{% csrf_token %}
                                 <div class="form-outline form-white mb-4">
-                                    <input type="text" name="username" placeholder="Username">
+                                    <input type="text" name="name" placeholder="Username">
                                 </div>
 
                                 <div class="form-outline form-white mb-4">
-                                    <input type="password" name="password" placeholder="Password">
+                                    <input type="password" name="pwds1" placeholder="Password">
 
                                 </div>
                                 <span class="text-error">{{ form.errors }}</span>
@@ -73,7 +73,7 @@ background: linear-gradient(to right, rgba(106, 17, 203, 1), rgba(37, 117, 252, 
                         </div>
 
                         <div>
-                            <p class="mb-0">Don't have an account? <a href="{% url 'home' %}"
+                            <p class="mb-0">Don't have an account? <a href="{% url 'register' %}"
                                                                       class="text-white-50 fw-bold">Sign
                                 Up</a>
                             </p>
