--- a/myapp/templates/navbar.html
+++ b/myapp/templates/navbar.html
@@ -59,7 +59,7 @@
 
 
             </ul>
-            <a href="#" class="btn btn-outline-primary my-2 my-sm-0 mr-4">Logout</a>
+            <a href="{% url 'logouts' %}" class="btn btn-outline-primary my-2 my-sm-0 mr-4">Logout</a>
 
 
         </div>
